# csa_lab_3

./: README.md  cat.out.mnem  cat.txt  golden_tests.py  hello.out  hello.txt  hello_user.out  hello_user.out.mnem  hello_user.txt  i.out  i.txt  i2.out  i2.txt  isa.py  machine.py  prob1.out  prob1.txt  pyproject.toml  translator.py
tests/golden/: cat.yml  hello.yml  hello_user.yml  prob1.yml
