[tool.poetry]
name = "csa-lab-3"
version = "0.1.0"
description = ""
authors = ["alinaagnistova <agnistova1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.3"
ruff = "^0.4.7"
pytest-golden = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
